2006-03-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/winmain.c: WANT_GET_DLLVERSION hardcoded active.
	(CSIDL_APPDATA): Provide fallback definition.
	(ShutDown): Removed ancient cruft.
	(appdata_directory): New function.  Dynamically attach to
	shell32.dll and ask it for the "application data" directory.
	(WinMain): Have get_user_env() take care of finding $HOME.
	INIFILE_IN_APPDATA hardcoded.

	* src/win/wcommon.h (INIFILE_IN_APPDATA, WANT_GETDLLVERSION):
	Definitions removed, hardcoded active now.
	(appdata_directory): Added prototype.

	* src/plot.c: Added #includes of win/wgnuplib.h, win/wcommon.h.
	(get_user_env) [WIN32]: Call helper routine to find Windows'
	"application data" directory.

2006-03-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (cp_alloc) src/plot3d.c (sp_alloc): Initialize the
	line style, arrow style, and fill style fields of each new plot to
	something reasonable.

2006-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS: List various new features added since last October.

	* src/gplt_x11.c: Store text rotation angle internally as a double.

2006-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	SourceForge patchset #1143563  "Place arbitrary objects in plots".
	This patchset introduces a general infrastructure for placing
	individual geometric objects, similar to "set label" and "set arrow".
	However the only objects implemented at this point are rectangles.

	set object <tag> rectangle
	    {from <position> {to|rto} <position>
		| center <position> size <w>,<h> | at <position> size <w>,<h>}
	    {front|back|behind} {fc|fillcolor <colorspec>} {fs <fillstyle>}
	    {default} {lw|linewidth <width>}

	set style rectangle {front|back} {fillcolor <colorspec>}
	    {fs <fillstyle>} {lw|linewidth <lw>}

	* configure.in: Configuration option:    ./configure --enable-objects
	Conditional compilation flag EAM_OBJECTS

	* demo/rectangle.dem docs/gnuplot.doc
