@@ -2,7 +2,7 @@
 AUTOMAKE_OPTIONS = foreign 1.2h
 
 EXTRA_DIST = README Makefile.am.in compact.c driver.h impcodes.h \
-object.h post.h $(CORETERM)
+object.h post.h $(CORETERM) PostScript
 
 # List of terminal drivers; must be created
 # prior to running automake
@@ -10,9 +10,14 @@ object.h post.h $(CORETERM)
 ##trm-files-end
 
 # For Unix and MSDOS only
-install:
-	$(top_srcdir)/mkinstalldirs $(GNUPLOT_PS_DIR)
-	$(INSTALL_DATA) PostScript/*.ps $(GNUPLOT_PS_DIR)
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(GNUPLOT_PS_DIR)
+	$(INSTALL_DATA) PostScript/*.ps $(DESTDIR)$(GNUPLOT_PS_DIR)
+
+uninstall-local:
+	@$(NORMAL_UNINSTALL)
+	echo " rm -f $(DESTDIR)$(GNUPLOT_PS_DIR)/*.ps"
+	rm -f $(DESTDIR)$(GNUPLOT_PS_DIR)/*.ps
 
 Makefile.am: Makefile.am.in
 	rm -f $@ $@t
