@@ -1,3 +1,12 @@
+2006-03-28  Lars Hecking  <lhecking@users.sourceforge.net>
+
+	* docs/gnuplot.texi: Regenerated after recent documentation updates.
+
+	* term/Makefile.am.in: Add PostScript directory to EXTRA_DIST. Add
+	uninstall support. Rename install target to install-data-local (don't
+	use automake-generated targets in Makefile.am) and add $(DESTDIR)
+	support.
+
 2006-03-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/win/winmain.c: WANT_GET_DLLVERSION hardcoded active.
